Fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  overflow-y: hidden;
 }
 
 .register-main {
